--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@account-kit/core": "4.35.1",
     "@account-kit/infra": "4.35.1",
     "@account-kit/react": "4.35.1",
+    "@account-kit/signer": "^4.41.0",
     "@account-kit/smart-contracts": "^4.40.0",
     "@alchemy/aa-accounts": "^3.19.0",
     "@radix-ui/react-label": "^2.1.7",
@@ -30,6 +31,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "viem": "2.30.0",
     "wagmi": "2.15.4"
   },
