--- a/package.json
+++ b/package.json
@@ -17,14 +17,24 @@
     "@account-kit/react": "4.35.1",
     "@account-kit/signer": "^4.41.0",
     "@account-kit/smart-contracts": "^4.40.0",
+    "@ai-sdk/azure": "^1.3.23",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
     "@alchemy/aa-accounts": "^3.19.0",
+    "@modelcontextprotocol/sdk": "^1.12.3",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.50.1",
     "@wagmi/core": "^2.17.3",
+    "ai": "^4.3.16",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "fastmcp": "^3.3.1",
     "lucide-react": "^0.511.0",
     "next": "14.2.4",
     "react": "^18",
@@ -32,8 +42,9 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "viem": "2.30.0",
-    "wagmi": "2.15.4"
+    "viem": "^2.29.2",
+    "wagmi": "2.15.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^20",
